--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "4aab0a54",
    "metadata": {},
    "outputs": [],
@@ -26,12 +26,12 @@
     "import os\n",
     "\n",
     "\n",
-    "img =cv2.imread('braille_page_3.jpg')"
+    "img =cv2.imread('braille_page_5.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "id": "d67b092b",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "id": "480109cb",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "id": "2bb51c64",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detected dots: 270\n"
+      "Detected dots: 6\n"
      ]
     },
     {
@@ -280,7 +280,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "id": "505c17da",
    "metadata": {},
    "outputs": [
@@ -322,8 +322,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 224x640 (no detections), 30.9ms\n",
-      "Speed: 6.9ms preprocess, 30.9ms inference, 0.3ms postprocess per image at shape (1, 3, 224, 640)\n"
+      "0: 224x224 a 0.50, cha 0.33, ba 0.12, e 0.01, ah 0.01, 7.0ms\n",
+      "Speed: 3.6ms preprocess, 7.0ms inference, 0.0ms postprocess per image at shape (1, 3, 224, 224)\n"
      ]
     },
     {
@@ -332,7 +332,7 @@
        "-1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,11 @@
    "source": [
     "from ultralytics import YOLO\n",
     "import cv2\n",
-    "model = YOLO(\"best_1.pt\")\n",
+    "model = YOLO(\"braille_yolov11_nano.pt\")\n",
+    "# model = YOLO(\"best_1.pt\")\n",
+    "# model = YOLO(\"best.pt\")\n",
+    "# model = YOLO(\"yolov8n.pt\")\n",
+    "# model = YOLO(\"Braille_Yolov11_old.pt\")\n",
     "# img = cv2.imread(\"braille_page_2.jpg\")\n",
     "results = model(output_image)\n",
     "annotated = results[0].plot()\n",
