--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4aab0a54",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d67b092b",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "480109cb",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2bb51c64",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "505c17da",
    "metadata": {},
    "outputs": [
@@ -324,8 +324,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 192x640 2 Bs, 1 H, 1 K, 3 Ls, 3 Ms, 4 Rs, 45.0ms\n",
-      "Speed: 5.8ms preprocess, 45.0ms inference, 0.6ms postprocess per image at shape (1, 3, 192, 640)\n"
+      "0: 192x640 (no detections), 113.2ms\n",
+      "Speed: 11.5ms preprocess, 113.2ms inference, 8.9ms postprocess per image at shape (1, 3, 192, 640)\n"
      ]
     },
     {
@@ -334,7 +334,7 @@
        "-1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,11 +342,12 @@
    "source": [
     "from ultralytics import YOLO\n",
     "import cv2\n",
-    "# model = YOLO(\"braille_yolov11_nano.pt\")\n",
+    "model = YOLO(\"braille_yolov11_nano.pt\")\n",
+    "# model = YOLO(\"best_2.pt\")\n",
     "# model = YOLO(\"best_1.pt\")\n",
     "# model = YOLO(\"best.pt\")\n",
     "# model = YOLO(\"yolov8n.pt\")\n",
-    "model = YOLO(\"Braille_Yolov11_old.pt\")\n",
+    "# model = YOLO(\"Braille_Yolov11_old.pt\")\n",
     "# img = cv2.imread(\"braille_page_2.jpg\")\n",
     "results = model(output_image)\n",
     "annotated = results[0].plot()\n",
